Finally a good name for the engine && Break physics!!

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-Make normal name for the engine.
-Add MS Windows support.
+Add MacOS support.
+Add MSVC support.
+Learn physics. I currently use my silly Mathematical logic instead of True Physical one.
